Fix for issue: Common Dialog is overlapping with the page content making it non accessible.

--- a/src/main/webapp/styles/less/wm-widgets.less
+++ b/src/main/webapp/styles/less/wm-widgets.less
@@ -2072,3 +2072,10 @@ If the height and width are not specified the video takes the height of the post
 @import (less) "../../components/angular-bootstrap-colorpicker/colorpicker.css";
 @import (less) "../../components/angular-toaster/toaster.css";
 
+/*This div was overlapping with the rest of the UI thereby blocking access to the content underneath it.
+Hence the height is set to 0. */
+.wm-app {
+  #wm-common-content {
+    height: 0;
+  }
+}
